import com.diffplug.gradle.spotless.SpotlessExtension

plugins {
    id("org.springframework.boot") version "4.0.1" apply false
    id("io.spring.dependency-management") version "1.1.7"
    id("com.vanniktech.dependency.graph.generator") version "0.8.0"
    id("jacoco")
    id("com.diffplug.spotless") version "8.1.0" apply false
    id("org.sonarqube") version "7.2.2.6593"
}

allprojects {
    repositories {
        mavenCentral() // NOSONAR - Trusted official Maven repository
    }
}

jacoco {
    toolVersion = "0.8.14"
}

sonar {
    properties {
        property("sonar.projectKey", "Project-UniCloud_uc-backend")
        property("sonar.organization", "project-unicloud")
        property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml")
    }
}

subprojects {
    apply(plugin = "io.spring.dependency-management")
    apply(plugin = "java")
    apply(plugin = "jacoco")
    apply(plugin = "com.diffplug.spotless")

    extensions.configure<SpotlessExtension> {
        java {
            palantirJavaFormat()
            targetExclude(
                "**/generated/**",
            )
        }
    }

    plugins.withId("java") {
        dependencies {
            add("implementation", "org.jetbrains:annotations:26.0.2")
        }
    }

    extensions.configure<JavaPluginExtension> {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(25))
        }
    }

    jacoco {
        toolVersion = rootProject.extensions.getByType<JacocoPluginExtension>().toolVersion
    }

    tasks.withType<Test>().configureEach {
        finalizedBy("jacocoTestReport")
        this.extensions.getByType<JacocoTaskExtension>().apply {
            isEnabled = true
            includes = listOf("com/unicloudapp/**")
        }
    }

    tasks.withType<JacocoReport>().configureEach {
        dependsOn(tasks.named("test"))

        reports {
            xml.required.set(true)
            html.required.set(true)
            csv.required.set(false)
        }

        val mainSourceSet = project.extensions.findByType<SourceSetContainer>()?.findByName("main")
        if (mainSourceSet != null) {
            sourceDirectories.from(mainSourceSet.allSource.srcDirs.filter { it.exists() })

            classDirectories.from(
                project.files(mainSourceSet.output.classesDirs).asFileTree.matching {
                    include("com/unicloudapp/**/*.class")
                    exclude(
                        "**/*Config.class",
                        "**/*Configuration.class",
                        "**/*Properties.class",
                        "**/*Exception.class"
                    )
                }
            )
        }
    }
}

tasks.register<JacocoReport>("jacocoRootReport") {
    group = "verification"
    description = "Generuje zagregowany raport pokrycia kodu dla wszystkich podmodułów."
    notCompatibleWithConfigurationCache("Aggregates subprojects using script object references; opt-out until refactored for CC.")

    val executionDataFiles = subprojects.flatMap { subproject ->
        subproject.tasks.withType<Test>().mapNotNull { testTask ->
            testTask.extensions.findByType<JacocoTaskExtension>()?.destinationFile?.takeIf { it.exists() }
        }
    }.distinct()
    executionData.from(files(executionDataFiles))

    val sourceDirectoriesFiles = subprojects.flatMap { subproject ->
        subproject.extensions.findByType<SourceSetContainer>()
            ?.findByName("main")
            ?.allSource
            ?.srcDirs
            ?.filter { it.exists() && !it.absolutePath.contains("build", ignoreCase = true) }
            ?: emptyList()
    }.distinct()
    sourceDirectories.from(files(sourceDirectoriesFiles))

    val classDirectoriesFromSubprojects = subprojects.flatMap { subproject ->
        subproject.extensions.findByType<SourceSetContainer>()
            ?.findByName("main")
            ?.output
            ?.classesDirs
            ?.files
            ?.filter { it.exists() }
            ?: emptyList()
    }.distinct()
        classDirectories.from(files(classDirectoriesFromSubprojects).asFileTree.matching {
        include("com/unicloudapp/**/*.class")
        exclude(
            "**/*Config.class",
            "**/*Configuration.class",
            "**/*Properties.class",
            "**/*Exception.class"
        )
    })

    reports {
        xml.required.set(true)
        html.required.set(true)
        csv.required.set(false)
    }

    dependsOn(subprojects.mapNotNull { it.tasks.findByName("test") })

    doFirst {
        println("Generowanie zagregowanego raportu JaCoCo...")
        println("Pliki .exec (${executionData.files.size}): ${executionData.files.joinToString { it.name }}")
        println("Katalogi źródłowe (${sourceDirectories.files.size}): ${sourceDirectories.files.joinToString { it.path.substringAfter(rootProject.projectDir.path) }}")
        println("Liczba filtrowanych plików klas: ${classDirectories.files.size}")
    }

    doLast {
        println("Zagregowany raport JaCoCo wygenerowany w: ${reports.html.outputLocation.get().asFile}")
    }
}